Alignment and input field fixes

--- a/client/src/components/interface/_styling/dropdown.css
+++ b/client/src/components/interface/_styling/dropdown.css
@@ -20,6 +20,10 @@ Written by Justin Tijunelis
   color: var(--red) !important;
 }
 
+.dropdown *[class*="-ValueContainer"] {
+  margin-left: 5px;
+}
+
 .dropdown *[class*="-indicatorContainer"]:hover {
   color: rgba(var(--red), 0.5) !important;
 }
